# rust-lib

./: .gitignore  Cargo.toml  rustdoc-katex.html
lib/: config.rs  config_old.rs  error.rs  lib.rs  nd.rs  nd_utils.rs  phys.rs  plotdefs.rs  plotlydefs.rs  pyo3_utils.rs  utils.rs  zx.rs
lib/math/: fft.rs  integrate.rs  mod.rs  probability.rs  search.rs  solve.rs
