[package]
name = "whooie"
version = "0.1.0"
authors = [ "whooie <wcwhuie@gmail.com>",]
edition = "2021"

[dev-dependencies]
ndarray = "0.15.6"

[dependencies]
itertools = "0.10.5"
num-traits = "0.2.15"
regex = "1.9.1"
serde = "1.0.164"
thiserror = "1.0.40"

[dependencies.toml]
version = "0.7.5"
features = [ "display",]

[dependencies.rand]
version = "0.8.5"
optional = true

[dependencies.num-complex]
version = "0.4.2"
optional = true

[dependencies.rustfft]
version = "6.0.1"
optional = true

[dependencies.ndrustfft]
version = "0.3.0"
optional = true

[dependencies.ndarray]
version = "0.15.6"
optional = true

[dependencies.ndarray-linalg]
version = "0.15.0"
optional = true

[dependencies.plotters]
version = "0.3.4"
optional = true

[dependencies.plotly]
version = "0.7.0"
features = [ "kaleido", "plotly_ndarray",]
optional = true

[dependencies.pyo3]
version = "0.17.1"
features = [ "extension-module",]
optional = true

[lib]
name = "whooie"
path = "lib/lib.rs"

[features]
nd = [ "dep:ndarray",]
ndarray-utils = [ "dep:ndarray",]
plotting = [ "dep:plotters",]
plotting-plotly = [ "dep:plotly",]
pyo3-utils = [ "dep:pyo3",]
math = [
    "dep:rand",
    "dep:num-complex",
    "dep:ndarray",
    "dep:ndarray-linalg",
    "dep:rustfft",
    "dep:ndrustfft",
]
all = [
    "nd",
    "ndarray-utils",
    "plotting",
    "plotting-plotly",
    "pyo3-utils",
    "math",
]

[profile.release]
lto = true
panic = "abort"
