[package]
name = "whooie"
version = "0.1.0"
authors = [ "whooie <wcwhuie@gmail.com>",]
edition = "2021"

# [build]
# rustdocflags = "--html-in-header rustdoc-latex.html"
#
# [package.metadata.docs.rs]
# rustdoc-args = [ "--html-in-header", "rustdoc-katex.html",]

[dev-dependencies]
ndarray = "0.15.6"

[dependencies]
itertools = "0.10.5"
ndarray = "0.15.6"
num-complex = "0.4.2"
num-traits = "0.2.15"
regex = "1.9.1"
thiserror = "1.0.40"

[dependencies.ndarray-linalg]
version = "0.15.0"
optional = true

[dependencies.ndarray-npy]
version = "0.8.1"
optional = true

[dependencies.ndrustfft]
version = "0.3.0"
optional = true

# [dependencies.plotters]
# version = "0.3.4"
# optional = true

[dependencies.matplotlib]
version = "0.2.0"
optional = true

# [dependencies.plotly]
# version = "0.8.4"
# features = [ "kaleido", "plotly_ndarray",]
# optional = true

[dependencies.pyo3]
version = "0.17.1"
features = [ "extension-module",]
optional = true
[dependencies.rand]
version = "0.8.5"
optional = true

[dependencies.rustfft]
version = "6.0.1"
optional = true

[dependencies.serde]
version = "1.0.190"
optional = true

[dependencies.serde_json]
version = "1.0.105"
features = [ "std",]
optional = true

[dependencies.serde_yaml]
version = "0.9.27"
optional = true

[dependencies.toml]
version = "0.7.5"
features = [ "parse", "display",]
optional = true

[lib]
name = "whooie"
path = "lib/lib.rs"

[features]
config = [ "dep:serde", "dep:toml", "dep:serde_json", "dep:serde_yaml",]
nd = [ ]
ndarray-utils = [ "dep:serde", "dep:ndarray-npy",]
# plotting = [ "dep:plotters",]
plotting = [ "dep:matplotlib",]
# plotting-plotly = [ "dep:plotly",]
pyo3-utils = [ "dep:pyo3",]
math = [ "dep:rand", "dep:ndarray-linalg", "dep:rustfft", "dep:ndrustfft",]
zx = [ ]
all = [
    "config",
    "nd",
    "ndarray-utils",
    "plotting",
    # "plotting-plotly",
    "pyo3-utils",
    "math",
    "zx",
]

[profile.release]
lto = true
panic = "abort"
